// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mockState: inside react > should correctly update the state and return the new state when using mockState with a callback > With updated content AND updated text field valud 1`] = `
<div>
  <div>
    <div
      class="junipero text-field dirty valid"
    >
      <input
        class="field"
        data-testid="Field"
        type="text"
        value="This is a test 2"
      />
    </div>
    <button>
      Add content
    </button>
    <div>
      Text: 
      This is a test 2
    </div>
    <div>
      Content: 
      foo, bar
    </div>
  </div>
</div>
`;

exports[`mockState: inside react > should correctly update the state and return the new state when using mockState with a callback > With updated text field value 1`] = `
<div>
  <div>
    <div
      class="junipero text-field dirty valid"
    >
      <input
        class="field"
        data-testid="Field"
        type="text"
        value="This is a test 2"
      />
    </div>
    <button>
      Add content
    </button>
    <div>
      Text: 
      This is a test 2
    </div>
    <div>
      Content: 
      foo
    </div>
  </div>
</div>
`;
